feat(example): update example

--- a/example/pc/index.html
+++ b/example/pc/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Examples</title>
   <script src="https://cdn.bootcss.com/eruda/1.5.8/eruda.min.js"></script>
   <script>
     eruda.init();
@@ -16,6 +16,5 @@
 </head>
 <body>
   <div id="root"></div>
-  <div id="test"></div>
 </body>
 </html>
